trunk/Archive2/00/9a8c9085d88bf9/output
main.cpp:7:1: error: extraneous 'template<>' in declaration of class 'Test'
template <>
^
main.cpp:20:2: error: expected '}'
}
 ^
main.cpp:8:12: note: to match this '{'
class Test {
           ^
main.cpp:20:2: error: expected ';' after class
}
 ^
 ;
3 errors generated.
